--- a/views/partials/index.hbs
+++ b/views/partials/index.hbs
@@ -7,7 +7,7 @@
     </div>
     <div class="row justify-content-center">
       <div class="col-4">
-        <form action="/uploadmultiple" enctype="multipart/form-data">
+        <form action="/uploadmultiple" enctype="multipart/form-data" method="POST">
           <div class="row">
             <div class="col-8">
               <input class="form-control" type="file" name="images" id="formFile" multiple>
