arranged cards and some CSS stuffs 🍪

--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,2 +1,11 @@
 </body>
+<div class="card text-center bg-dark" style="margin-top:auto">
+  <div class="card-header">
+  </div>
+  <div class="card-body">
+    <p class="card-title text-light">Created by</p>
+    <h6 class="card-text text-light">Gourav Singh Rawat aka Seek4samurai</h6>
+    <a href="https://github.com/Seek4samurai/Image-Center" class="btn btn-primary" target="blank">Github</a>
+  </div>
+</div>
 </html>
