--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Image-Center</title>
+  <title>Wholesome Images 😍</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/css/style.css">
+  <link rel="stylesheet" href="../../public/css/style.scss">
 </head>
-<body>
+<body class="bg-danger" style="display: flex; flex-direction:column">
